--- a/practice.yml
+++ b/practice.yml
@@ -1,31 +1,31 @@
 apiVersion: apps/v1
-kind: Deployment
-metadata:
+kind:  Deployment
+metadata: 
   name: deploy
   labels:
-    app: devapp
+    app: depapp
 spec:
-  strategy:
-    type: RollingUpdate 
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 1
-    selector:
-      matchExpressions:
-       - { key: app, operator: In, values: [rsapp, dapp, nginx]}
-       - { key: app, operator: Exists}
-      matchLabels:
-         app: devapp
-      replicas: 6
-      templates:
-        metadata:
-         labels:
-           name: nginxapp
-           app: devapp
-        spec: 
-         containers:
+    strategy:
+      type: RollingUpdate
+      rollingUpdate:
+            maxSurge: 1     # Maximum number of pods that can be created over the desired replicas
+            maxUnavailable: 1  # Maximum number of pods that can be unavailable during the update
+    selector: 
+      #matchExpressions:      
+         #  -  { key: app, operator: In , values: [rsapp,  new-app]}
+         #   -  { key: app, operator: Exists}
+      matchLabels: 
+          app: depapp
+    replicas: 10
+    template:
+      metadata:
+        labels:
+          name: nginxapp
+          app: depapp
+      spec:
+        containers:
           - name: nginxapp
-            image: httpd:latest
+            image: httpd:latest 
             ports:
-              - containerPort: 80
-                protocol: TCP
+                - containerPort: 80
+                  protocol: TCP
