--- a/ingress-sample/tomcat/devtom.yml
+++ b/ingress-sample/tomcat/devtom.yml
@@ -43,7 +43,7 @@ spec:
   maxReplicas: 4
   metrics:
     - type: Resource 
-      resources:
+      resource:
         name: cpu
         target:
            type: Utilization
