--- a/ingress-sample/nginx/devnginx.yml
+++ b/ingress-sample/nginx/devnginx.yml
@@ -45,7 +45,7 @@ spec:
   maxReplicas: 4
   metrics:
     - type: Resource
-      resources:
+      resource:
          name: cpu
          target:
            type: Utilization
