--- a/ingress-sample/ingress_rule.yml
+++ b/ingress-sample/ingress_rule.yml
@@ -1,27 +1,27 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-   name: oneingress
-   annotations:
-      nginx.ingress.kubernetes.io/rewrite-target: /
+  name: oneingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
   rules:
-    - host: 26F267516844ABEAE1600E16FC6CFD77.gr7.ap-northeast-1.eks.amazonaws.com
-      http:
+  - host: 26F267516844ABEAE1600E16FC6CFD77.gr7.ap-northeast-1.eks.amazonaws.com
+    http:
       paths:
-         
-        - path: /nginx
-          pathType: Prefix
-          backend: 
-            service: 
-              name: frontendsrv
-              port: 
-                number: 80
-        - path: /tomcat
-          pathType: Prefix
-          backend:
-            service:
-               name: backendsrv
-               port: 
-                 number: 8080
+        
+         -  path: /
+            pathType: Prefix
+            backend:
+              service: 
+                name: frontendsrv
+                port:
+                  number: 80
+         -  path: /student
+            pathType: Prefix
+            backend:
+              service: 
+                name: backendsrv
+                port:
+                  number: 8080
