--- a/ingress-sample/ingress_rule.yml
+++ b/ingress-sample/ingress_rule.yml
@@ -7,21 +7,19 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: 26F267516844ABEAE1600E16FC6CFD77.gr7.ap-northeast-1.eks.amazonaws.com
-    http:
+  - http:
       paths:
-        
-         -  path: /
-            pathType: Prefix
-            backend:
-              service: 
-                name: frontendsrv
-                port:
-                  number: 80
-         -  path: /student
-            pathType: Prefix
-            backend:
-              service: 
-                name: backendsrv
-                port:
-                  number: 8080
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: frontendsrv
+            port:
+              number: 80
+      - path: /student
+        pathType: Prefix
+        backend:
+          service:
+            name: backendsrv
+            port:
+              number: 8080
